--- a/roles/cert/templates/etcd-peer-csr.json.j2
+++ b/roles/cert/templates/etcd-peer-csr.json.j2
@@ -1,10 +1,10 @@
 {
     "CN": "k8s-etcd",
     "hosts": [
-        "10.4.7.11",
-        "10.4.7.12",
-        "10.4.7.21",
-        "10.4.7.22"
+        "{{ node11 }}",
+        "{{ node12 }}",
+        "{{ node21 }}",
+        "{{ node22 }}",
     ],
     "key": {
         "algo": "rsa",
