--- a/roles/cert/templates/etcd-peer-csr.json.j2
+++ b/roles/cert/templates/etcd-peer-csr.json.j2
@@ -4,7 +4,7 @@
         "{{ node11 }}",
         "{{ node12 }}",
         "{{ node21 }}",
-        "{{ node22 }}",
+        "{{ node22 }}"
     ],
     "key": {
         "algo": "rsa",
