--- a/roles/nginx/templates/nginx.conf.j2
+++ b/roles/nginx/templates/nginx.conf.j2
@@ -85,8 +85,8 @@ http {
 
 stream {
     upstream kube-apiserver {
-        server "{{ node21 }}":6443     max_fails=3 fail_timeout=30s;
-        server "{{ node22 }}":6443     max_fails=3 fail_timeout=30s;
+        server {{ node21 }}:6443     max_fails=3 fail_timeout=30s;
+        server {{ node22 }}:6443     max_fails=3 fail_timeout=30s;
     }
     server {
         listen 7443;
