--- a/roles/kubelet/templates/kubelet.sh.j2
+++ b/roles/kubelet/templates/kubelet.sh.j2
@@ -10,7 +10,7 @@
   --client-ca-file ./cert/ca.pem \
   --tls-cert-file ./cert/kubelet.pem \
   --tls-private-key-file ./cert/kubelet-key.pem \
-  --hostname-override "hdss7-{{ last_num_of_ip }}".host.com \
+  --hostname-override hdss7-{{ last_num_of_ip }}.host.com \
   --image-gc-high-threshold 20 \
   --image-gc-low-threshold 10 \
   --kubeconfig ./conf/kubelet.kubeconfig \
