--- a/roles/cert/templates/apiserver-csr.json.j2
+++ b/roles/cert/templates/apiserver-csr.json.j2
@@ -8,8 +8,7 @@
         "kubernetes.default.svc.cluster",
         "kubernetes.default.svc.cluster.local",
         "{{ node21 }}",
-        "{{ node22 }}",
-        "10.4.7.23"
+        "{{ node22 }}"
     ],
     "key": {
         "algo": "rsa",
