--- a/roles/init/templates/host.com.zone.j2
+++ b/roles/init/templates/host.com.zone.j2
@@ -9,9 +9,9 @@ $TTL 600    ; 10 minutes
                )
             NS dns.host.com.
 $TTL 60 ; 1 minute
-dns              A "{{ node11 }}"
-HDSS7-11         A "{{ node11 }}"
-HDSS7-12         A "{{ node12 }}"
-HDSS7-21         A "{{ node21 }}"
-HDSS7-22         A "{{ node22 }}"
-HDSS7-200        A "{{ node200 }}"
+dns              A {{ node11 }}
+HDSS7-11         A {{ node11 }}
+HDSS7-12         A {{ node12 }}
+HDSS7-21         A {{ node21 }}
+HDSS7-22         A {{ node22 }}
+HDSS7-200        A {{ node200 }}
