--- a/roles/init/templates/od.com.zone.j2
+++ b/roles/init/templates/od.com.zone.j2
@@ -9,4 +9,4 @@ $TTL 600    ; 10 minutes
                )
             NS dns.od.com.
 $TTL 60 ; 1 minute
-dns              A "{{ node11 }}"
+dns              A {{ node11 }}
