--- a/roles/init/templates/named.rfc1912.zones.j2
+++ b/roles/init/templates/named.rfc1912.zones.j2
@@ -43,11 +43,11 @@ zone "0.in-addr.arpa" IN {
 zone "host.com" IN {
         type  master;
         file  "host.com.zone";
-        allow-update { "{{ node11 }}"; };
+        allow-update { {{ node11 }}; };
 };
 
 zone "od.com" IN {
         type  master;
         file  "od.com.zone";
-        allow-update { "{{ node11 }}"; };
+        allow-update { {{ node11 }}; };
 };
