--- a/roles/kubelet/templates/kubelet.sh.j2
+++ b/roles/kubelet/templates/kubelet.sh.j2
@@ -15,5 +15,5 @@
   --image-gc-low-threshold 10 \
   --kubeconfig ./conf/kubelet.kubeconfig \
   --log-dir /data/logs/kubernetes/kube-kubelet \
-  --pod-infra-container-image kubernetes/pause:latest \
+  --pod-infra-container-image kubernetes/pause \
   --root-dir /data/kubelet
