--- a/roles/etcd/templates/etcd-server-startup.sh.j2
+++ b/roles/etcd/templates/etcd-server-startup.sh.j2
@@ -1,12 +1,12 @@
 #!/bin/sh
-./etcd --name etcd-server-7-"{{ last_num_of_ip }}" \
+./etcd --name etcd-server-7-{{ last_num_of_ip }} \
        --data-dir /data/etcd/etcd-server \
-       --listen-peer-urls https://"{{ etcd_ip }}":2380 \
-       --listen-client-urls https://"{{ ansible_default_ipv4.address }}":2379,http://127.0.0.1:2379 \
+       --listen-peer-urls https://{{ etcd_ip }}:2380 \
+       --listen-client-urls https://{{ ansible_default_ipv4.address }}:2379,http://127.0.0.1:2379 \
        --quota-backend-bytes 8000000000 \
-       --initial-advertise-peer-urls https://"{{ ansible_default_ipv4.address }}":2380 \
-       --advertise-client-urls https://"{{ ansible_default_ipv4.address }}":2379,http://127.0.0.1:2379 \
-       --initial-cluster  etcd-server-7-12=https://"{{ node12 }}":2380,etcd-server-7-21=https://"{{ node21 }}":2380,etcd-server-7-22=https://"{{ node22 }}":2380 \
+       --initial-advertise-peer-urls https://{{ ansible_default_ipv4.address }}:2380 \
+       --advertise-client-urls https://{{ ansible_default_ipv4.address }}:2379,http://127.0.0.1:2379 \
+       --initial-cluster  etcd-server-7-12=https://{{ node12 }}:2380,etcd-server-7-21=https://{{ node21 }}:2380,etcd-server-7-22=https://{{ node22 }}:2380 \
        --ca-file ./certs/ca.pem \
        --cert-file ./certs/etcd-peer.pem \
        --key-file ./certs/etcd-peer-key.pem \
