--- a/roles/cert/templates/apiserver-csr.json.j2
+++ b/roles/cert/templates/apiserver-csr.json.j2
@@ -7,6 +7,7 @@
         "kubernetes.default.svc",
         "kubernetes.default.svc.cluster",
         "kubernetes.default.svc.cluster.local",
+        "{{ virtual_ipaddress }}",
         "{{ node21 }}",
         "{{ node22 }}"
     ],
