--- a/roles/flannel/templates/flanneld.sh.j2
+++ b/roles/flannel/templates/flanneld.sh.j2
@@ -1,6 +1,6 @@
 #!/bin/sh
 ./flanneld \
-  --public-ip={{ flannel-ip }} \
+  --public-ip={{ flannel_ip }} \
   --etcd-endpoints=https://{{ node12 }}:2379,https://{{ node21 }}:2379,https://{{ node22 }}:2379 \
   --etcd-keyfile=/opt/flannel/cert/client-key.pem \
   --etcd-certfile=/opt/flannel/cert/client.pem \
