install nfs and update prometheus

--- a/roles/prometheus/templates/prometheus-dp.yaml.j2
+++ b/roles/prometheus/templates/prometheus-dp.yaml.j2
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: prometheus
-        image: harbor.od.com/library/prometheus:v2.12.0
+        image: docker.io/prom/prometheus:v2.12.0
         imagePullPolicy: IfNotPresent
         command:
         - /bin/prometheus
