--- a/roles/prometheus/templates/kube-state-metrics-dp.yaml.j2
+++ b/roles/prometheus/templates/kube-state-metrics-dp.yaml.j2
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: kube-state-metrics
-        image: harbor.od.com/library/kube-state-metrics:v1.5.0
+        image: quay.io/coreos/kube-state-metrics:v1.5.0
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
