--- a/roles/prometheus/templates/blackbox-exporter-dp.yaml.j2
+++ b/roles/prometheus/templates/blackbox-exporter-dp.yaml.j2
@@ -25,7 +25,7 @@ spec:
           defaultMode: 420
       containers:
       - name: blackbox-exporter
-        image: harbor.od.com/library/blackbox-exporter:v0.15.1
+        image: docker.io/prom/blackbox-exporter:v0.15.1
         imagePullPolicy: IfNotPresent
         args:
         - --config.file=/etc/blackbox_exporter/blackbox.yml
