--- a/roles/redis/templates/redis-master-controller.yaml.j2
+++ b/roles/redis/templates/redis-master-controller.yaml.j2
@@ -13,9 +13,15 @@ spec:
       labels:
         name: redis-master
     spec:
+      volumes:
+      - name: "persistent-storage"
+        hostPath:
+          path: "/data"
+        volumeMounts:
+        - name: "persistent-storage"
+          mountPath: "/data"
       containers:
       - name: master
         image: redis
         ports:
         - containerPort: 6379
-
